--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -2,15 +2,17 @@
 # Check our guides at https://confluence.atlassian.com/x/e8YWN for more examples.
 # Only use spaces to indent your .yml configuration.
 # -----
-# You can specify a custom docker image from Docker Hub as your build environment.          
+# You can specify a custom docker image from Docker Hub as your build environment.
 image: php:7.1
 
 pipelines:
     branches:
         development-0.0.1:
-        - step:
+        - step: 
             name: Production
             caches:
-                - composer
+              - composer
             script:
-            - ssh ubuntu@23.20.179.178 'bash -s' < execute.sh
+              - apt-get update && apt-get install -y unzip
+              - apt-get install -y openssh-client
+              - ssh ubuntu@23.20.179.178 'bash -s' < execute.sh
