--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "brozot/laravel-fcm": "^1.3",
         "fideloper/proxy": "^4.0",
         "intervention/image": "^2.5",
+        "justbetter/laravel-pagination-with-havings": "^1.4",
         "laravel/framework": "5.8.*",
         "laravel/passport": "^7.4",
         "laravel/tinker": "^1.0",
